crates/tui/tests/storybook/snapshots/app_tool::tool_header_wrapping_for_bash_glob_and_grep.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* bash cargo test -p smelt-tui content::display_ren  14:37:03
       derers::layout_ir::tests::runs_continuation_
       indent_aligns_soft_wrapped_rows
  test result: ok

* explore ×2                                         14:37:03
  glob crates/tui/tests/storybook/snapshots/app_tool::*.snap
  in /Users/leo/dev/rust/smelt/.worktrees/transcript-layout-r
  ewrite
  grep "wrap_fragments_with_widths|continuation_indent|ToolSu
  mmaryResolver" in crates/tui/src crates/buffer/src



─ ✿ working… ─────────────────────────────────────────────────

──────────────────────────────────────────────────────────────
 ○ normal                                             1:1 100%
