crates/tui/tests/storybook/snapshots/app_tool::tool_header_wrapping_for_bash_glob_and_grep.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 62 18
  0   0   1 fg=AnsiValue(77)
  0   1   5 attrs=dim
  0   7  10 fg=Rgb { r: 255, g: 255, b: 255 }
  0  17   3 fg=Rgb { r: 253, g: 151, b: 31 }
  0  20  41 fg=Rgb { r: 255, g: 255, b: 255 }
  1   7  54 fg=Rgb { r: 255, g: 255, b: 255 }
  2   7  11 fg=Rgb { r: 255, g: 255, b: 255 }
  3   2  15 attrs=dim
  5   0   1 fg=AnsiValue(77)
  5   1   5 attrs=dim
  8   2   7 attrs=dim
 10   0   1 fg=AnsiValue(77)
 10   1   5 attrs=dim
 12   2   9 attrs=dim
 14   0   1 fg=AnsiValue(237)
 14   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 14   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 14   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 14   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 14   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 14   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 14   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 14   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 14   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 14  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 14  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 14  13  49 fg=AnsiValue(237)
 15   1   1 fg=Black bg=White
 16   0  62 fg=AnsiValue(237)
 17   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 17  10  44 bg=AnsiValue(233)
 17  54   8 fg=AnsiValue(244) bg=AnsiValue(233)
