crates/tui/tests/storybook/snapshots/app_tool::web_search_tool_block.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
⏺ web_search rust unicode width crate
  1. unicode-width — crates.io
  2. unicode-segmentation — crates.io



─ ✿ working… ─────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────
 ○ normal
