crates/tui/tests/storybook/snapshots/app_tool::workspace_tool_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 464
expression: frame.text()
---
* enter_worktree native-worktree-support

* switch_cwd /repo/.worktrees/native-worktree-support











─ ✿ working… ─────────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                         1:1 100%
